# me2025-clase-PabloZR-ug

./: CMakeLists.txt  README.md
Evaluacion Final/: RK2&RK4-Problema_final.c  problema_final.txt  readme.md
Proyecto/: Readme.md  factorizacion_lu_proyecto.c  gauss_seidel_proyecto.c  metodo_gauss_jordan_proyecto.c
Proyecto2/: Graficador_proyecto2.ipynb  rung-kutta4.c
Semana 11/: eliminacio_gaussiana.c  metodo_gauss_con_pregunta.c  readme.md
Semana1/: Ago6_1  Ago6_1.ipynb  Ago6_2.ipynb  README.md
Semana10/: metodo_gauss_simple.c  readme.md
Semana12/: readme.md  tarea_de_la_semana.txt
Semana13/: busqueda_matriz_identidad.c  factorizacion_lu_diferentes-resultados.c  readme.md
Semana14/: actividad_en_clase_metodo_gradiente.txt  metodo_gradiente.c  metodo_gradiente_diferencias_finitas.c  readme.md
Semana15/: Problema12_11_Optimización.ipynb  Readme.md
Semana16/: Ejercicio_cafe.ipynb  Ejercicio_cafe_xi_cuadrada.ipynb  RB_25.txt  RB_45.txt  Readme.md  xi_cuadrada_gradiente_inverso.c
Semana17/: Rung-Kutta2.c  euler_diferenciales_ordinarias.c  interpolacion_cuadratica.c  interpolacion_lineal.c  interpolacion_polinomial.c  readme.md
Semana2/: Ago12_Semana2.ipynb  Ago12_ej1.c  Ago13_Semana2.ipynb  Readme.md  Tamanos_de_variables.ipynb  operaciones_float.c  operaciones_int.c
Semana3/: Pseudocódigo Mclaurin y Pseint  Serie mclaurin.c  readme.md  serie_de_maclaurin.psc
Semana4/: Readme-md  Readme.md  codigo_taylor.c
Semana5/: Método Bisección.psc  Readme.md  metodo_biseccion.c
Semana6/: comparacion_raices.c  ejercicio_clase_errores.c  readme.md
(+23 files in other folders)
